--- a/public/frontend/css/style.css
+++ b/public/frontend/css/style.css
@@ -329,9 +329,11 @@ border-radius: 24px 0px 0px 15px;
     border-right: 1px solid transparent;
     background-color: transparent;
     padding-top: 50px;
-    padding-bottom: 50px;
+    /* padding-bottom: 50px; */
 
 }
+
+
 .custome-accordion .accordion-button:not(.collapsed){
     background-color: transparent;
     color: white;
